# transfer_smore_barcode

./: .gitignore  CHANGELOG.md  README.md  build_exe_simple.py  calibration.py  camera_capture.py  epiceye_camera.py  requirements.txt  run_ui.py  smore_camera.py  ui_tool.py
cpp_lib/: CMakeLists.txt  build_imx8plus_in_docker.sh  roi_projector.cpp  roi_projector.h  roi_projector.hpp  test_roi_projector.cpp
epiceye/: __init__.py  epiceye.py  epicraw_parser.py
test/: calib_out.json
